tests/ui/macros/issue-39404.stderr
error: missing fragment specifier
  --> $DIR/issue-39404.rs:4:6
   |
LL |     ($i) => {};
   |      ^^
   |
   = note: fragment specifiers must be provided
   = help: valid fragment specifiers are `ident`, `block`, `stmt`, `expr`, `pat`, `ty`, `lifetime`, `literal`, `path`, `meta`, `tt`, `item` and `vis`, along with `expr_2021` and `pat_param` for edition compatibility
help: try adding a specifier here
   |
LL |     ($i:spec) => {};
   |        +++++

error: aborting due to 1 previous error

