tests/ui/macros/issue-39404.rs
#![allow(unused)]

macro_rules! m {
    ($i) => {}; //~ ERROR missing fragment specifier
}

fn main() {}
